<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright @2019 by Alexzander Purwoko Widiantoro <purwoko908@gmail.com>
  ~ This prototype is used for testing, and educating about APIs
  ~ @author APWDevs
  ~
  ~ Licensed under GNU GPLv3
  ~
  ~ This module is provided by "AS IS" and if you want to take
  ~ a copy or modifying this module, you must include this @author
  ~ Thanks! Happy Coding!
  -->

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/title_on_center"
                    android:backgroundTint="#E63C3C3C"
                    android:elevation="8dp"
                    android:text="@string/candidate_realcount"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/white" />

            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fragment_realcount_candidate_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="4"
                    tools:listitem="@layout/list_candidate_realcount" />

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/title_on_center"
                    android:backgroundTint="#D50000"
                    android:elevation="8dp"
                    android:gravity="center_horizontal|center"
                    android:text="@string/golput"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@android:color/white" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#D50000"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <com.mikhaellopez.circularprogressbar.CircularProgressBar
                                android:id="@+id/realcount_progress_user_election"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="6dp"
                                app:cpb_background_progressbar_color="#81A2A2A2"
                                app:cpb_background_progressbar_width="5dp"
                                app:cpb_progress="40"
                                app:cpb_progress_direction="to_right"
                                app:cpb_progress_max="100"
                                app:cpb_progressbar_color="#FFFFFF"
                                app:cpb_progressbar_width="6dp"
                                app:cpb_round_border="true"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                                android:id="@+id/realcount_progress_user_election_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textColor="@android:color/white"
                                app:layout_constraintBottom_toBottomOf="@+id/realcount_progress_user_election"
                                app:layout_constraintEnd_toEndOf="@+id/realcount_progress_user_election"
                                app:layout_constraintStart_toStartOf="@+id/realcount_progress_user_election"
                                app:layout_constraintTop_toTopOf="@+id/realcount_progress_user_election"
                                tools:text="40%" />

                        <TextView
                                android:id="@+id/realcount_text_user"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@android:color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/realcount_progress_user_election"
                                tools:text="4 dari 10" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/user_not_voted"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@android:color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/realcount_text_user" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#D50000"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <com.mikhaellopez.circularprogressbar.CircularProgressBar
                                android:id="@+id/realcount_progress_user_deactivated"
                                android:layout_width="100dp"
                                android:layout_height="100dp"
                                android:layout_marginTop="6dp"
                                app:cpb_background_progressbar_color="#81A2A2A2"
                                app:cpb_background_progressbar_width="5dp"
                                app:cpb_progress="20"
                                app:cpb_progress_direction="to_right"
                                app:cpb_progress_max="100"
                                app:cpb_progressbar_color="#FFFFFF"
                                app:cpb_progressbar_width="6dp"
                                app:cpb_round_border="true"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                                android:id="@+id/realcount_progress_user_deactivated_text"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textColor="@android:color/white"
                                app:layout_constraintBottom_toBottomOf="@+id/realcount_progress_user_deactivated"
                                app:layout_constraintEnd_toEndOf="@+id/realcount_progress_user_deactivated"
                                app:layout_constraintStart_toStartOf="@+id/realcount_progress_user_deactivated"
                                app:layout_constraintTop_toTopOf="@+id/realcount_progress_user_deactivated"
                                tools:text="20%" />

                        <TextView
                                android:id="@+id/realcount_text_user_deactivated"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="8dp"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="@android:color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/realcount_progress_user_deactivated"
                                tools:text="2 dari 10" />

                        <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="4dp"
                                android:text="@string/user_deactivated"
                                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                                android:textColor="@android:color/white"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/realcount_text_user_deactivated" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>


    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>