<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright @2019 by Alexzander Purwoko Widiantoro <purwoko908@gmail.com>
  ~ This prototype is used for testing, and educating about APIs
  ~ @author APWDevs
  ~
  ~ Licensed under GNU GPLv3
  ~
  ~ This module is provided by "AS IS" and if you want to take
  ~ a copy or modifying this module, you must include this @author
  ~ Thanks! Happy Coding!
  -->

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/useradmin_deact_save"
            android:scrollbars="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                    android:id="@+id/useradmin_linear_2cards"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2">

                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#D50000"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:id="@+id/useradmin_totalusers"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="24dp"
                                tools:text="623"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                                android:id="@+id/useradmin_desc"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="16dp"
                                android:gravity="center_horizontal"
                                android:text="@string/user_registerred_intps"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="#FFFFFF"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/useradmin_totalusers" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        app:cardBackgroundColor="#D50000"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="6dp"
                        app:cardUseCompatPadding="true"
                        app:contentPadding="6dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                        <TextView
                                android:id="@+id/useradmin_userdeactivated"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="24dp"
                                tools:text="60"
                                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                                android:textColor="#FFFFFF"
                                android:textSize="40sp"
                                android:textStyle="bold"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                                android:id="@+id/useradmin_userdeactivated_desc"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="16dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginBottom="16dp"
                                android:gravity="center_horizontal"
                                android:text="@string/user_has_deactivated"
                                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                                android:textColor="#FFFFFF"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/useradmin_userdeactivated" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <org.angmarch.views.NiceSpinner
                    android:id="@+id/useradmin_tps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    tools:entries="@array/listitem_tps" />


            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/useradmin_tps_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    app:fastScrollEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/list_useradmin_deact" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
            android:id="@+id/useradmin_deact_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            app:cardBackgroundColor="#1565C0"
            app:cardCornerRadius="6dp"
            app:cardElevation="6dp"
            app:cardUseCompatPadding="true"
            app:contentPadding="6dp">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/save_changes"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@android:color/white" />
    </androidx.cardview.widget.CardView>

</RelativeLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>